// Copyright (C) 2020 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "storj.io/storj/satellite/internalpb";

package satellite.audithistory;

import "gogo.proto";
import "google/protobuf/timestamp.proto";

message AuditHistory {
    repeated AuditWindow windows = 1;
    double score = 2;
}

message AuditWindow {
    google.protobuf.Timestamp window_start = 1 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    int32 online_count = 2;
    int32 total_count = 3;
}
